# archivemanager

./: .gitignore  Cargo.toml  build.rs  demo_data.toml  schema.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20260604_000001_create_artifacts_table.rs
src/: app.slint  error_propagator.rs  main.rs
src/db/: connection.rs  mod.rs  queries.rs
src/entities/: artifacts.rs  mod.rs  prelude.rs
