[package]
name = "archivemanager"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.3"  # GUI app framework (egui)
tokio = { version = "^1.52.3", features = ["full"] } # Asynchronous fun
sea-orm = { version = "2.0.0-rc.40", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] } # Database library that should make life easier
sea-orm-migration = "2.0.0-rc.40" # For handling database creating tables and such without writing raw SQL (hopefully)
anyhow = "1.0" # For error handling
log = "0.4" # Logging
env_logger = "0.11" # Logger... Because of course there is a separate crate for that.

migration = { path = "./migration" } # Migration is in a separate crate because that's how sea-orm-migration works. It is what it is.
