[package]
name = "archivemanager"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.3"  # GUI app framework (egui)
tokio = { version = "^1.52.3", features = ["full"] } # Asynchronous fun
anyhow = "1.0" # For error handling
log = "0.4" # Logging
env_logger = "0.11" # Logger... Because of course there is a separate crate for that.
egui_infinite_scroll = "0.10" # Ready-made scroll for egui
egui-phosphor = "0.12" # Icons

# Migration is gone, long live Neo4j!
neo4rs = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
toml = "1.1.2"
